--- a/index.html
+++ b/index.html
@@ -18,73 +18,73 @@
 
 <body>
   <header class="header header-border">
-			<div class="flex-nav container">
+    <div class="flex-nav container">
       <a href="" class="logotype">
-          Web<span class="logotype__dark" lang="en">Studio</span></a>
-				<div class="menu-container js-menu-container" id="mobile-menu">
-					<div class="all-nav">
-						<button class="menu-button-close js-close-menu" type="button">
-							<svg width="40" height="40" aria-label="Переключатель мобильного меню">
-								<use class="menu-button-close__icon-close" href="./images/sprite_images/icons.svg#icon-close_mob"></use>
-							</svg>
-						</button>
+        Web<span class="logotype__dark" lang="en">Studio</span></a>
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <div class="all-nav">
+          <button class="menu-button-close js-close-menu" type="button">
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="menu-button-close__icon-close" href="./images/sprite_images/icons.svg#icon-close_mob"></use>
+            </svg>
+          </button>
 
-						<nav class="left-nav">
-							<ul class="left-nav-menu">
-								<li class="list menu-item">
-									<a href="./index.html" class="link menu-item__text menu-item__text--current current">Студия</a>
-								</li>
-								<li class="list menu-item">
-									<a href="./portfolio.html" class="link menu-item__text">Портфолио</a>
-								</li>
-								<li class="list menu-item">
-									<a href="" class="link menu-item__text">Контакты</a>
-								</li>
-							</ul>
-						</nav>
-						<div class="menu-bottom">
-							<ul class="right-nav">
-								<li class="list contact-item">
-									<a href="mailto:info@devstudio.com" class="link contact-mail">
-										<svg class="contact-mail__icon" width="16" height="12">
-											<use href="./images/sprite_images/icons.svg#icon-envelope"></use>
-										</svg>
-										info@devstudio.com
-									</a>
-								</li>
-								<li class="list contact-item">
-									<a href="tel:+380961111111" class="link contact-tel">
-										<svg class="contact-tel__icon" width="10" height="16">
-											<use href="./images/sprite_images/icons.svg#icon-smartphone"></use>
-										</svg>
-										+38 096 111 11 11
-									</a>
-								</li>
-							</ul>
-							<ul class="menu-socials list">
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">Instagram</a>
-								</li>
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">Twitter</a>
-								</li>
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">Facebook</a>
-								</li>
-								<li class="menu-socials__item">
-									<a href="" class="menu-socials__link link">LinkedIn</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<button type="button" class="menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-					<svg width="40" height="40" aria-label="Вызов меню">
-						<use class="menu-button__icon-menu" href="./images/sprite_images/icons.svg#icon-menu_mob"></use>
-					</svg>
-				</button>
-			</div>
-		</header>
+          <nav class="left-nav">
+            <ul class="left-nav-menu">
+              <li class="list menu-item">
+                <a href="./index.html" class="link menu-item__text menu-item__text--current current">Студия</a>
+              </li>
+              <li class="list menu-item">
+                <a href="./portfolio.html" class="link menu-item__text">Портфолио</a>
+              </li>
+              <li class="list menu-item">
+                <a href="" class="link menu-item__text">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="menu-bottom">
+            <ul class="right-nav">
+              <li class="list contact-item">
+                <a href="mailto:info@devstudio.com" class="link contact-mail">
+                  <svg class="contact-mail__icon" width="16" height="12">
+                    <use href="./images/sprite_images/icons.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="list contact-item">
+                <a href="tel:+380961111111" class="link contact-tel">
+                  <svg class="contact-tel__icon" width="10" height="16">
+                    <use href="./images/sprite_images/icons.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+            <ul class="menu-socials list">
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">Instagram</a>
+              </li>
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">Twitter</a>
+              </li>
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">Facebook</a>
+              </li>
+              <li class="menu-socials__item">
+                <a href="" class="menu-socials__link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <button type="button" class="menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <svg width="40" height="40" aria-label="Вызов меню">
+          <use class="menu-button__icon-menu" href="./images/sprite_images/icons.svg#icon-menu_mob"></use>
+        </svg>
+      </button>
+    </div>
+  </header>
   <main class="main">
     <section class="hero">
       <div class="container hero__container">
@@ -200,7 +200,7 @@
             ./images/hero_images/team/tablet/team-member-1@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-1.jpg 1x,
                 ./images/hero_images/team/mobile/team-member-1@2x.jpg 2x
-                " media="(min-width: 480px)" />
+                " media="(max-width: 767px)" />
               <img src="./images/hero_images/team-member-1.jpg" alt="Игорь Демьяненко" />
             </picture>
             <div class="team__box">
@@ -245,7 +245,7 @@
               <source srcset="./images/hero_images/team/tablet/team-member-2.jpg 1x,
             ./images/hero_images/team/tablet/team-member-2@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-2.jpg 1x,
-            ./images/hero_images/team/mobile/team-member-2@2x.jpg 2x" media="(min-width: 480px)" />
+            ./images/hero_images/team/mobile/team-member-2@2x.jpg 2x" media="(max-width: 767px)" />
               <img src="./images/hero_images/team-member-2.jpg" alt="Ольга Репина" />
             </picture>
             <div class="team__box">
@@ -291,7 +291,7 @@
             ./images/hero_images/team/tablet/team-member-3@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-3.jpg 1x,
                 ./images/hero_images/team/mobile/team-member-3@2x.jpg 2x
-                " media="(min-width: 480px)" />
+                " media="(max-width: 767px)" />
               <img src="./images/hero_images/team-member-3.jpg" alt="Николай Тарасов" />
             </picture>
             <div class="team__box">
@@ -337,7 +337,7 @@
             ./images/hero_images/team/tablet/team-member-4@2x.jpg 2x" media="(min-width: 768px)" />
               <source srcset="./images/hero_images/team/mobile/team-member-4.jpg 1x,
                 ./images/hero_images/team/mobile/team-member-4@2x.jpg 2x
-                " media="(min-width: 480px)" />
+                " media="(max-width: 767px)" />
               <img src="./images/hero_images/team-member-4.jpg" alt="Михаил Ермаков" />
             </picture>
             <div class="team__box">
@@ -430,73 +430,72 @@
   </main>
   <footer class="footer">
     <div class="container footer-container">
-        <div class="footer__addresses">
-          <a href="" class="logotype__footer">
-              Web<span class="logotype__footer-white" lang="en">Studio</span>
-          </a>
-          <address class="addreses">
-            <ul class="contacts-list">
-              <li class="contact__item">
-                <a class="contact__adress" href="https://goo.gl/maps/caNGbkWrKr49V2LV8" target="_blank"
-                  rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-              </li>
-              <li class="contact__item">
-                <a class="contact__link" href="mailto:info@devstudio.com">info@devstudio.com
-                </a>
-              </li>
-              <li class="contact__item">
-                <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11 </a>
-              </li>
-            </ul>
-          </address>
-        </div>
-        <div class="footer-social-part">
-          <p class="footer-social__title">Присоединяйтесь</p>
-          <ul class="footer-social__list">
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/sprite_images/icons.svg#icon-instagram"></use>
-                </svg>
+      <div class="footer__addresses">
+        <a href="" class="logotype__footer">
+          Web<span class="logotype__footer-white" lang="en">Studio</span>
+        </a>
+        <address class="addreses">
+          <ul class="contacts-list">
+            <li class="contact__item">
+              <a class="contact__adress" href="https://goo.gl/maps/caNGbkWrKr49V2LV8" target="_blank"
+                rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="contact__item">
+              <a class="contact__link" href="mailto:info@devstudio.com">info@devstudio.com
               </a>
             </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/sprite_images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/sprite_images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/sprite_images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+            <li class="contact__item">
+              <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11 </a>
             </li>
           </ul>
-        </div>
-        <div class="footer-subscribe">
-          <p class="subscribe__title">Подпишитесь на рассылку</p>
-          <form action="#" class="subscribe__form">
-            <div class="footer__form-field">
-              <label for="user-email-footer" class="footer__input-label"> </label>
-              <input type="text" name="user-email" class="subscribe__input-text" id="user-email-footer"
-                placeholder="E-mail" />
-            </div>
-            <button type="submit" class="subscribe__button">Подписаться<svg class="subscribe-icon" width="24"
-                height="24">
-                <use href="./images/sprite_images/icons.svg#icon-send"></use>
-              </svg></button>
-          </form>
-        </div>
+        </address>
+      </div>
+      <div class="footer-social-part">
+        <p class="footer-social__title">Присоединяйтесь</p>
+        <ul class="footer-social__list">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link">
+              <svg class="footer-social__icon" width="20" height="20">
+                <use href="./images/sprite_images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link">
+              <svg class="footer-social__icon" width="20" height="20">
+                <use href="./images/sprite_images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link">
+              <svg class="footer-social__icon" width="20" height="20">
+                <use href="./images/sprite_images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link">
+              <svg class="footer-social__icon" width="20" height="20">
+                <use href="./images/sprite_images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-subscribe">
+        <p class="subscribe__title">Подпишитесь на рассылку</p>
+        <form action="#" class="subscribe__form">
+          <div class="footer__form-field">
+            <label for="user-email-footer" class="footer__input-label"> </label>
+            <input type="text" name="user-email" class="subscribe__input-text" id="user-email-footer"
+              placeholder="E-mail" />
+          </div>
+          <button type="submit" class="subscribe__button">Подписаться<svg class="subscribe-icon" width="24" height="24">
+              <use href="./images/sprite_images/icons.svg#icon-send"></use>
+            </svg></button>
+        </form>
+      </div>
     </div>
   </footer>
   <!--is-hidden прячет модалку-->
@@ -555,13 +554,10 @@
       </form>
     </div>
   </div>
-  <script
-			defer
-			src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-			integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-			crossorigin="anonymous"
-		></script>
-		<script src="./js/mobile-menu.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+  <script src="./js/mobile-menu.js"></script>
   <script src="./js/modal.js"></script>
 </body>
 
