--- a/portfolio.html
+++ b/portfolio.html
@@ -116,8 +116,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-1.jpg 1x,
             ./images/portfolio_images/tablet/img-1@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-1.jpg 1x,
-            ./images/portfolio_images/mobile/img-1@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-1.jpg" width="370" height="294" alt="Ноутбук с проектом" />
+            ./images/portfolio_images/mobile/img-1@2x.jpg 2x" media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-1.jpg" alt="Ноутбук с проектом" />
                 </picture>
                 <p class="portfolio__tumb">Технокряк это современная площадка распространения коронавируса.
                   Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -137,8 +137,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-2.jpg 1x,
             ./images/portfolio_images/tablet/img-2@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-2.jpg 1x,
-            ./images/portfolio_images/mobile/img-2@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-2.jpg" width="370" height="294" alt="Момент матча" />
+            ./images/portfolio_images/mobile/img-2@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-2.jpg" alt="Момент матча" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
@@ -159,8 +159,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-3.jpg 1x,
             ./images/portfolio_images/tablet/img-3@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-3.jpg 1x,
-            ./images/portfolio_images/mobile/img-3@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-3.jpg" width="370" height="294" alt="Логотип с рыбой" />
+            ./images/portfolio_images/mobile/img-3@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-3.jpg" alt="Логотип с рыбой" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
@@ -179,8 +179,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-4.jpg 1x,
             ./images/portfolio_images/tablet/img-4@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-4.jpg 1x,
-            ./images/portfolio_images/mobile/img-4@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-4.jpg" width="370" height="294" alt="Фотография наушников" />
+            ./images/portfolio_images/mobile/img-4@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-4.jpg" alt="Фотография наушников" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
@@ -199,8 +199,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-5.jpg 1x,
             ./images/portfolio_images/tablet/img-5@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-5.jpg 1x,
-            ./images/portfolio_images/mobile/img-5@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-5.jpg" width="370" height="294" alt="Фотография коробок" />
+            ./images/portfolio_images/mobile/img-5@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-5.jpg" alt="Фотография коробок" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
@@ -219,8 +219,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-6.jpg 1x,
             ./images/portfolio_images/tablet/img-6@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-6.jpg 1x,
-            ./images/portfolio_images/mobile/img-6@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-6.jpg" width="370" height="294" alt="Монитор с картой мира" />
+            ./images/portfolio_images/mobile/img-6@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-6.jpg" alt="Монитор с картой мира" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
@@ -239,8 +239,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-7.jpg 1x,
             ./images/portfolio_images/tablet/img-7@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-7.jpg 1x,
-            ./images/portfolio_images/mobile/img-7@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-7.jpg" width="370" height="294" alt="Разворот книги" />
+            ./images/portfolio_images/mobile/img-7@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-7.jpg"  alt="Разворот книги" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
@@ -261,8 +261,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-8.jpg 1x,
             ./images/portfolio_images/tablet/img-8@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-8.jpg 1x,
-            ./images/portfolio_images/mobile/img-8@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-8.jpg" width="370" height="294" alt="Фотография этикетки" />
+            ./images/portfolio_images/mobile/img-8@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-8.jpg" alt="Фотография этикетки" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
@@ -281,8 +281,8 @@
                   <source srcset="./images/portfolio_images/tablet/img-9.jpg 1x,
             ./images/portfolio_images/tablet/img-9@2x.jpg 2x" media="(min-width: 768px)" />
                   <source srcset="./images/portfolio_images/mobile/img-9.jpg 1x,
-            ./images/portfolio_images/mobile/img-9@2x.jpg 2x" media="(min-width: 480px)" />
-                  <img src="./images/portfolio_images/img-9.jpg" width="370" height="294" alt="Работа за ноутбуком" />
+            ./images/portfolio_images/mobile/img-9@2x.jpg 2x"  media="(max-width: 767px)" />
+                  <img src="./images/portfolio_images/img-9.jpg" alt="Работа за ноутбуком" />
                 </picture>
                 <p class="portfolio__tumb"></p>
               </div>
